# python-design-patterns

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
behavioral/: __init__.py
behavioral/chain_of_responsibility/: README.md  advanced.py  basic.py  practical.py
behavioral/command/: README.md  advanced.py  basic.py  practical.py
behavioral/interpreter/: README.md  advanced.py  basic.py  practical.py
behavioral/iterator/: README.md  advanced.py  basic.py  practical.py
behavioral/mediator/: README.md  advanced.py  basic.py  practical.py
behavioral/memento/: README.md  advanced.py  basic.py  practical.py
behavioral/observer/: README.md  advanced.py  basic.py  practical.py
behavioral/state/: README.md  advanced.py  basic.py  practical.py
behavioral/strategy/: README.md  advanced.py  basic.py  practical.py
behavioral/template_method/: README.md  advanced.py  basic.py  practical.py
behavioral/visitor/: README.md  advanced.py  basic.py  practical.py
creational/: __init__.py
creational/abstract-factory/: README.md
creational/abstract_factory/: README.md  advanced.py  basic.py  practical.py
creational/builder/: README.md  advanced.py  basic.py  practical.py
creational/factory/: README.md
creational/factory_method/: README.md  advanced.py  basic.py  practical.py
creational/prototype/: README.md  advanced.py  basic.py  classes.py  practical.py
creational/singleton/: README.md  advanced.py  basic.py  main.py  practical.py  real-world.py
structural/: __init__.py
structural/adapter/: README.md  advanced.py  basic.py  practical.py
structural/bridge/: README.md  advanced.py  basic.py  classes.py  practical.py
structural/composite/: README.md  advanced.py  basic.py  practical.py
structural/decorator/: README.md  advanced.py  basic.py  practical.py
structural/facade/: README.md  advanced.py  basic.py  classes.py  practical.py
structural/flyweight/: README.md  advanced.py  basic.py  practical.py
structural/proxy/: README.md  advanced.py  basic.py  practical.py
tests/: __init__.py  test_all_patterns.py
tools/: __init__.py  migrate_patterns.py  run_examples.py
